--- a/web/templates/create_character.html
+++ b/web/templates/create_character.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Criar Personagem</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/character_creation.css') }}">
 </head>
 <body>
     <h1>Criar Novo Personagem</h1>
